got the buttons to redirect to a new page, but need to work on having the filtered results show up

--- a/Syllabase/results.html
+++ b/Syllabase/results.html
@@ -14,6 +14,6 @@
     <div id="results-template"></div>
 
     <script type="module" src="/src/main.ts"></script>
-    <script type="module" src="/src/database-results.ts"></script>
+    <script type="module" src="/src/results-page.ts"></script>
   </body>
 </html>
