--- a/Syllabase/index.html
+++ b/Syllabase/index.html
@@ -14,6 +14,7 @@
     <div id="app"></div>
 
     <script type="module" src="/src/main.ts"></script>
+    <script type="module" src="/src/global.ts"></script>
     <script type="module" src="/src/homepage.ts"></script>
   </body>
 </html>
