--- a/Syllabase/results.html
+++ b/Syllabase/results.html
@@ -8,12 +8,12 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <title>Results - Syllabase</title>
+    <title>Syllabase</title>
   </head>
   <body>
     <div id="results-template"></div>
 
-    <script type="module" src="/src/main.ts"></script>
+     <script type="module" src="/src/global.ts"></script>
     <script type="module" src="/src/results-page.ts"></script>
   </body>
 </html>
