got the database setup and the quick search links to take to the desired page and list the accurate courses from the list

--- a/Syllabase/search.html
+++ b/Syllabase/search.html
@@ -11,9 +11,9 @@
     <title>Syllabase</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="search-page"></div>
 
-    <script type="module" src="/src/main.ts"></script>
     <script type="module" src="/src/global.ts"></script>
+    <script type="module" src="/src/homepage.ts"></script>
   </body>
 </html>
